Closed
Bug 803733
Opened 8 years ago
Closed 8 years ago
Remove the hack around otoro orientation issue when capturing still images
Categories
(Firefox OS Graveyard :: Gaia, defect)
Tracking
(blocking-basecamp:+, firefox17 fixed, firefox18 fixed)
RESOLVED
FIXED
blocking-basecamp | + |
People
(Reporter: cjones, Assigned: m1)
References
Details
(Whiteboard: [fota] QARegressExclude)
Attachments
(1 file, 1 obsolete file)
5.70 KB,
patch
|
cjones
:
review+
|
Details | Diff | Splinter Review |
We should normalize all these device quirks at the platform level. We've already busted another device from the hack.
Assignee | ||
Comment 1•8 years ago
|
||
Assignee | ||
Comment 2•8 years ago
|
||
PR for gaia portion: https://github.com/mozilla-b2g/gaia/pull/5909
Assignee | ||
Comment 3•8 years ago
|
||
Try run: https://tbpl.mozilla.org/?tree=Try&rev=dbf93f3bc829
Assignee | ||
Comment 4•8 years ago
|
||
Otoro/Unagi quirks already landed: https://github.com/mozilla-b2g/android-device-otoro/commit/b456d081241f5c4bbf13d8f0e79ab140cc45a4f1 https://github.com/mozilla-b2g/android-device-unagi/commit/86e1911d940f1cfdad661603a305d07f3d041bb8
Assignee | ||
Updated•8 years ago
|
blocking-basecamp: --- → ?
Reporter | ||
Comment 6•8 years ago
|
||
This blocks correctly-oriented photos on the commercial phone.
blocking-basecamp: ? → +
Assignee | ||
Updated•8 years ago
|
Attachment #673505 -
Flags: review?(jones.chris.g)
Reporter | ||
Updated•8 years ago
|
Attachment #673505 -
Flags: review?(jones.chris.g) → review+
Reporter | ||
Comment 7•8 years ago
|
||
The PR of course looks fine, but please give us until Monday to land until we can work out something for otoro/unagi dogfooders. Sorry about that.
Updated•8 years ago
|
Assignee: nobody → mvines
Assignee | ||
Comment 8•8 years ago
|
||
Carrying r+ forward
Attachment #673505 -
Attachment is obsolete: true
Attachment #674898 -
Flags: review+
Assignee | ||
Updated•8 years ago
|
Attachment #673505 -
Attachment is obsolete: false
Assignee | ||
Comment 9•8 years ago
|
||
Comment on attachment 674898 [details] [diff] [review] Trivial rebase nm. can't drive hg properly yet...
Attachment #674898 -
Attachment is obsolete: true
Assignee | ||
Updated•8 years ago
|
Keywords: checkin-needed
Whiteboard: [checkin-needed:aurora]
Assignee | ||
Comment 10•8 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/450f060c4577
Reporter | ||
Comment 11•8 years ago
|
||
Note to Moz dogfooders / bisecters: this patch and the associated gaia commit will result in rotated images being captured by the cameras on otoro and unagi. That's 100% expected and understood. You won't see this bug in full flashes. mvines was kind enough to land that workaround for us. However, we need to ship this workaround in a FOTA update to dogfooders. (Or have them push a new file to device.)
Comment 12•8 years ago
|
||
I'll land this on Aurora after it lands on m-c. No need to request checkin on that part as long as it's got blocking-basecamp+ or approval-aurora+.
Keywords: checkin-needed
Whiteboard: [checkin-needed:aurora]
Assignee | ||
Comment 13•8 years ago
|
||
(In reply to Chris Jones [:cjones] [:warhammer] from comment #11) > ... land that workaround for us. Ref: https://github.com/mozilla-b2g/android-device-otoro/commit/b456d081241f5c4bbf13d8f0e79ab140cc45a4f1 https://github.com/mozilla-b2g/android-device-unagi/commit/86e1911d940f1cfdad661603a305d07f3d041bb8
Reporter | ||
Comment 14•8 years ago
|
||
Also FTR, the FOTA wheels are in motion.
Comment 15•8 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/450f060c4577
Status: NEW → RESOLVED
Closed: 8 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Reporter | ||
Comment 16•8 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/ea122969082d
Reporter | ||
Updated•8 years ago
|
status-firefox17:
--- → fixed
status-firefox18:
--- → fixed
Updated•8 years ago
|
Whiteboard: [fota]
Comment 20•8 years ago
|
||
Defect is verified as fixed using the Unagi device, build 20130114073222. Needs to be verified on an Otoro device.
Updated•8 years ago
|
Whiteboard: [fota] → [fota] QARegressExclude
You need to log in
before you can comment on or make changes to this bug.
Description
•