Bug 803733 - Normalize camera sensor orientation. r=cjones